@startuml
class UpgradeSelector <<TowerContainer>> {
    - sellChoice : SellChoice
    - upgradeChoice : UpgradeChoice
    # <<override>> OnChoiceClicked(choice:IChoice) : void
    + SetNextUpgrade(nextTowerPrefab:GameObject?) : void
}
class UpgradeChoice {
    - buttonLabelUpgrade : string = "Upgrade"
    - buttonLabelMax : string = "Max"
    - maxSprite : Sprite
    + NextTowerPrefab : GameObject
    + Label : string <<get>>
    + Price : int <<get>>
    + Sprite : Sprite <<get>>
    + SetUpgrade(nextTowerPrefab:GameObject?) : void
}
class SellChoice {
    - buttonLabel : string = "Sell"
    - sprite : Sprite
    + Label : string <<get>>
    + Price : int <<get>>
    + Sprite : Sprite <<get>>
}
RadialSelector <|-- UpgradeSelector
UpgradeSelector ..> SellChoice
UpgradeSelector ..> UpgradeChoice
IChoice <|-- UpgradeChoice
IChoice <|-- SellChoice
@enduml
